Bisect straight line gesture features dont work ("Flip" / "Snap" option) #91320

Closed
opened 2021-09-10 18:40:06 +02:00 by Damian · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: 1eb06de260
Worked: (newest version of Blender that worked as expected)

Short description of error
Bisect "Flip" option doesn't work or I just don't understand what it is doing. Couldn't find any description of what is it either.

image.png

Exact steps for others to reproduce the error

  • Open default scene
  • Mesh -> Bisect
  • {key LMB} to draw a cut line
  • Press {key F}
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: `1eb06de260` Worked: (newest version of Blender that worked as expected) **Short description of error** Bisect "Flip" option doesn't work or I just don't understand what it is doing. Couldn't find any description of what is it either. ![image.png](https://archive.blender.org/developer/F10394679/image.png) **Exact steps for others to reproduce the error** - Open default scene - `Mesh -> Bisect` - {key LMB} to draw a cut line - Press {key F}
Author

Added subscriber: @DamianWinnichenko

Added subscriber: @DamianWinnichenko
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

It does not make much sense in case of Bisect, but it was added for this (see video in the patch) D9301: UI: Allow changing the active side of line gestures.
And while {key spacebar} moving is supported well, {key Ctrl} snapping is also not working.

It does not make much sense in case of Bisect, but it was added for this (see video in the patch) [D9301: UI: Allow changing the active side of line gestures](https://archive.blender.org/developer/D9301). And while {key spacebar} moving is supported well, {key Ctrl} snapping is also not working.
Philipp Oeser changed title from Bisect "Flip" option to Bisect straight line gesture features dont work ("Flip" / "Snap" option) 2021-09-13 12:58:22 +02:00
Member

Have a fix for the {key Ctrl} snapping case, will post in a bit.

Have a fix for the {key Ctrl} snapping case, will post in a bit.

This issue was referenced by cbf18b6586

This issue was referenced by cbf18b65868661407e97e9451d0838b2e9e4ac70

This issue was referenced by 503d79cd77

This issue was referenced by 503d79cd779f103cbea74eca390419e8c6fd2aad
Philipp Oeser self-assigned this 2021-09-13 15:12:46 +02:00
Member

Snapping fix is here D12470: Fix straightline gesture snapping not working for modal tools, and flipping might actually make sense for bisect, so will look into that as well.

Snapping fix is here [D12470: Fix straightline gesture snapping not working for modal tools](https://archive.blender.org/developer/D12470), and flipping might actually make sense for bisect, so will look into that as well.

This issue was referenced by 1bcdd1c54e

This issue was referenced by 1bcdd1c54e6e9034af2ad1d78b30b891ac42a655
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91320
No description provided.